print files in dir

--- a/explorations/data-exploration.ipynb
+++ b/explorations/data-exploration.ipynb
@@ -30,6 +30,19 @@
    "source": [
     "price_data_dir = '../scrapers/asuntojen-hintatiedot/scraped_data/'\n",
     "assert os.path.exists(price_data_dir), f'directory {price_data_dir} did not exist!'\n",
+    "\n",
+    "for path, dirs, files in os.walk(price_data_dir):\n",
+    "    break\n",
+    "    \n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_path = price_data_dir + '2021-04-16.csv'\n",
     "data = pd.read_csv(file_path)"
    ]
