update the Helsinki visualizations notebook with neighbourhood prices

--- a/explorations/data-exploration-Helsinki.ipynb
+++ b/explorations/data-exploration-Helsinki.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import re\n",
@@ -27,7 +28,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../scrapers/asuntojen-hintatiedot/scraped_data/2021-04-19_Helsinki.csv')"
+    "price_data_dir = '../scrapers/asuntojen-hintatiedot/scraped_data/'\n",
+    "assert os.path.exists(price_data_dir), f'directory {price_data_dir} did not exist!'\n",
+    "\n",
+    "for path, dirs, files in os.walk(price_data_dir):\n",
+    "    break\n",
+    "    \n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = price_data_dir + '2021-04-19_Helsinki.csv'\n",
+    "data = pd.read_csv(file_path)"
    ]
   },
   {
@@ -67,16 +84,29 @@
     "    simple_rooms = simple_rooms_regexp.findall(room_arrangement)\n",
     "    if len(simple_rooms) > 0:\n",
     "        return int(simple_rooms[0])\n",
-    "    return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"has_elevator\"] * 1"
+    "    return 0\n",
+    "\n",
+    "def correct_neighbourhood(data):\n",
+    "    if type(data[\"neighbourhood\"]) == str:\n",
+    "        if 'tapiola' in data[\"neighbourhood\"].lower():\n",
+    "            return 'Tapiola'\n",
+    "        neighborhood_regexp = re.compile('^[a-zöä\\-]*', re.IGNORECASE)\n",
+    "        neighborhood = neighborhood_regexp.findall(data[\"neighbourhood\"])\n",
+    "        if len(neighborhood) > 0:\n",
+    "            return neighborhood[0]\n",
+    "    return ''\n",
+    "\n",
+    "def calculate_neighbourhood_avg_price(data):\n",
+    "    neighborhood_prices = {}\n",
+    "    grouped = data.groupby('neighbourhood')\n",
+    "    for name, group in grouped:\n",
+    "        neighborhood_prices[name] = round(sum(group[\"price_per_square_meters\"]) / len(group[\"price_per_square_meters\"]))\n",
+    "    return neighborhood_prices\n",
+    "\n",
+    "def set_neighbourhood_price(prices):\n",
+    "    def set_price(data):\n",
+    "        return prices[data[\"neighbourhood\"]]\n",
+    "    return set_price\n"
    ]
   },
   {
@@ -93,7 +123,25 @@
     "data[\"is_rowhouse\"] = (data[\"house_type\"] == \"rowhouse\") * 1\n",
     "data[\"is_townhouse\"] = (data[\"house_type\"] == \"townhouse\") * 1\n",
     "data[\"lot_is_owned\"] = (data[\"lot\"] == \"owned\") * 1\n",
+    "\n",
+    "# neighbourhoods\n",
+    "data['neighbourhood'] = data['neighborhood'].replace(np.nan, '')\n",
+    "data[\"neighbourhood\"] = data.apply(correct_neighbourhood, axis=1)\n",
+    "data['neighbourhood'] = data['neighbourhood'].replace('neighbourhood', 'unknown')\n",
+    "\n",
+    "neighbourhood_prices = calculate_neighbourhood_avg_price(data)\n",
+    "data[\"neighbourhood_avg_price\"] = data.apply(set_neighbourhood_price(neighbourhood_prices), axis=1)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighbourhood_prices_df = pd.DataFrame(index=['price_m2'], data=neighbourhood_prices).T\n",
+    "neighbourhood_prices_df.loc[['Oulunkylä', 'Patola', 'Pohjois-haaga', 'Etelä-haaga', 'Lassila', 'Meilahti']]"
    ]
   },
   {
@@ -101,6 +149,29 @@
    "metadata": {},
    "source": [
     "## Visualize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(24, 10), dpi=140, facecolor='w')\n",
+    "\n",
+    "colors = plt.get_cmap('plasma')(np.arange(0, data.shape[0]))\n",
+    "neighbourhood_data = data[[\"neighbourhood\", \"neighbourhood_avg_price\"]].drop_duplicates().sort_values(by='neighbourhood_avg_price')\n",
+    "\n",
+    "ax.bar(neighbourhood_data[\"neighbourhood\"], neighbourhood_data[\"neighbourhood_avg_price\"], color=colors)\n",
+    "plt.yticks(list(range(0,15000, 1000)))\n",
+    "plt.xticks(rotation=90, fontsize=7)\n",
+    "plt.title(\"Neigborhood price range\")\n",
+    "plt.ylabel(\"Price, €\")\n",
+    "plt.xlabel(\"Neighborhood\")\n",
+    "plt.margins(0)\n",
+    "plt.grid()\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -125,16 +196,6 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Thoughts on square meters vs price\n",
-    "- Well, less suprisingly, there seems to be a big dependency between the size and the price of the apartment.\n",
-    "- townhouses tend to be bigger than rowhouses and rowhouses tend to be bigger than apartments\n",
-    "- the bigger the house the more variance there is in the price"
    ]
   },
   {
