average price per m2 by room and neighbourhood; some case study examples in helsinki

--- a/explorations/data-exploration-Helsinki.ipynb
+++ b/explorations/data-exploration-Helsinki.ipynb
@@ -19,7 +19,10 @@
     "import re\n",
     "from datetime import datetime\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n"
    ]
   },
   {
@@ -137,11 +140,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data.sort_values('neighborhood').neighborhood.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "neighbourhood_prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neigh_rooms_df = data.groupby(['neighbourhood', 'house_type', 'number_of_rooms']).mean().reset_index()[['neighbourhood', 'house_type', 'number_of_rooms', 'square_meters', 'price_including_loans', 'price_per_square_meters', 'age', 'neighbourhood_avg_price']]\n",
+    "neigh_rooms_df['diff_neigh_avg'] = neigh_rooms_df['price_per_square_meters'] - neigh_rooms_df['neighbourhood_avg_price']\n",
+    "neigh_rooms_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "neighbourhood_prices_df = pd.DataFrame(index=['price_m2'], data=neighbourhood_prices).T\n",
-    "neighbourhood_prices_df.loc[['Oulunkylä', 'Patola', 'Pohjois-haaga', 'Etelä-haaga', 'Lassila', 'Meilahti']]"
+    "neighbourhood_wl = ['Oulunkylä', 'Patola',\n",
+    "                             'Munkkiniemi',\n",
+    "                             'Munkkivuori',\n",
+    "                             #'Pikku huopalahti', \n",
+    "                             'Pikku-huopalahti', \n",
+    "                             'Pohjois-haaga', \n",
+    "                             #'Pohjois haaga', \n",
+    "                             'Etelä-haaga', \n",
+    "                             'Lassila', 'Meilahti', \n",
+    "                             #'Pikkuhuopalahti'\n",
+    "                            ]\n",
+    "neighbourhood_prices_df.loc[neighbourhood_wl]"
    ]
   },
   {
@@ -149,6 +198,39 @@
    "metadata": {},
    "source": [
     "## Visualize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_values_on_bars(axs, perc=False, round_to=0):\n",
+    "    def _show_on_single_plot(ax):\n",
+    "        for p in ax.patches:\n",
+    "            if np.isnan(p.get_height()):\n",
+    "                continue\n",
+    "            _x = p.get_x() + p.get_width() / 2\n",
+    "            _y = p.get_y() + p.get_height()\n",
+    "            _h = p.get_height()\n",
+    "            value = _h * 100 if perc else _h\n",
+    "            value = round(value, round_to)\n",
+    "            value = str(int(value)) if round_to == 0 else str(value)\n",
+    "            ax.text(_x, _y, value, ha=\"center\", fontsize=8)\n",
+    "\n",
+    "    if isinstance(axs, np.ndarray):\n",
+    "        for idx, ax in np.ndenumerate(axs):\n",
+    "            _show_on_single_plot(ax)\n",
+    "    else:\n",
+    "        _show_on_single_plot(axs)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Neighbourhoods "
    ]
   },
   {
@@ -171,6 +253,57 @@
     "plt.margins(0)\n",
     "plt.grid()\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Neighbourhoods by house type and number of rooms "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(12, 8), dpi=140, facecolor='w')\n",
+    "\n",
+    "htype = 'apartment'\n",
+    "neighbourhoods_wl = [\n",
+    "    'Oulunkylä', \n",
+    "    'Patola',        \n",
+    "    'Meilahti', \n",
+    "    'Munkkiniemi',\n",
+    "    'Munkkivuori',\n",
+    "    'Pikkuhuopalahti',\n",
+    "    'Pikku huopalahti', \n",
+    "    'Pikku-huopalahti', \n",
+    "    'Pohjois-haaga', \n",
+    "    'Pohjois haaga', \n",
+    "    'Etelä-haaga', \n",
+    "    'Lassila',\n",
+    "    'Kannelmäki',\n",
+    "]\n",
+    "\n",
+    "mask = neigh_rooms_df.neighbourhood.apply(lambda n: n in neighbourhoods_wl)\n",
+    "to_plot_df = neigh_rooms_df[mask]\n",
+    "to_plot_df = to_plot_df.query(f'house_type == \"{htype}\"')\n",
+    "\n",
+    "ax = sns.barplot(data=to_plot_df,\n",
+    "                x='neighbourhood',\n",
+    "                y='price_per_square_meters', \n",
+    "                hue='number_of_rooms'\n",
+    "           )\n",
+    "\n",
+    "show_values_on_bars(ax)\n",
+    "ax.legend(bbox_to_anchor=(1.01, 1))\n",
+    "\n",
+    "ax.set_title(f'average price of {htype}s per m2 in chosen neighborhoods by number of rooms')\n",
+    "\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -370,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Only rowhouses!"
+    "## Only apartments!"
    ]
   },
   {
@@ -379,9 +512,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rowhouse_data = data[data[\"is_rowhouse\"] == 1]\n",
-    "rw_x = rowhouse_data[['square_meters', 'shape_is_good', 'age', 'lot_is_owned']]\n",
-    "rw_y = rowhouse_data[\"price_including_loans\"]"
+    "htype = 'apartment'\n",
+    "neighbourhoods_wl = [\n",
+    "    'Oulunkylä', \n",
+    "    'Patola',        \n",
+    "    #'Meilahti', \n",
+    "    #'Munkkiniemi',\n",
+    "    'Munkkivuori',\n",
+    "    #'Pikkuhuopalahti',\n",
+    "    #'Pikku huopalahti', \n",
+    "    #'Pikku-huopalahti', \n",
+    "    'Pohjois-haaga', \n",
+    "    'Pohjois haaga', \n",
+    "    #'Etelä-haaga', \n",
+    "    'Lassila',\n",
+    "    'Kannelmäki',\n",
+    "]\n",
+    "\n",
+    "mask = data.neighbourhood.apply(lambda n: n in neighbourhoods_wl)\n",
+    "train_df = data[mask]\n",
+    "train_df = train_df.query(f'house_type == \"{htype}\"')\n",
+    "\n",
+    "train_df"
    ]
   },
   {
@@ -390,7 +542,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rowhouse_model = LinearRegression().fit(rw_x, rw_y)"
+    "x = train_df[['square_meters', 'shape_is_good', 'age', 'has_elevator', 'lot_is_owned']]\n",
+    "y = train_df[\"price_including_loans\"]"
    ]
   },
   {
@@ -399,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rowhouse_model.coef_"
+    "model = LinearRegression().fit(x, y)"
    ]
   },
   {
@@ -408,8 +561,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidate_rowhouse = np.array([80, 1, 30, 1]).reshape(1, -1)\n",
-    "rowhouse_model.predict(candidate_rowhouse)"
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidate = np.array([44.6, 1, 50, 1, 0]).reshape(1, -1)\n",
+    "cand_ren = 45000\n",
+    "cand_price = 189000\n",
+    "model.predict(candidate)"
    ]
   },
   {
@@ -425,10 +589,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rowhouse_data = data[data[\"is_rowhouse\"] == 1]\n",
-    "rw_sq_x = np.array(rowhouse_data['square_meters']).reshape(-1, 1)\n",
-    "rw_sq_y = rowhouse_data[\"price_including_loans\"]\n",
-    "rowhouse_square_meter_model = LinearRegression().fit(rw_sq_x, rw_sq_y)"
+    "sq_x = np.array(train_df['square_meters']).reshape(-1, 1)\n",
+    "sq_y = train_df[\"price_including_loans\"]\n",
+    "sm_model = LinearRegression().fit(sq_x, sq_y)"
    ]
   },
   {
@@ -437,8 +600,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rw_coef = rowhouse_square_meter_model.coef_\n",
-    "rw_intercept = rowhouse_square_meter_model.intercept_"
+    "sm_coef = sm_model.coef_\n",
+    "sm_intercept = sm_model.intercept_"
    ]
   },
   {
@@ -447,18 +610,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(20, 10))\n",
     "\n",
-    "ax.scatter(rowhouse_data[\"square_meters\"], rowhouse_data[ \"price_including_loans\"])\n",
-    "ax.scatter(110, 409414, label=\"Candidate predicted price\", s=100)\n",
-    "ax.scatter(110, 498367, label=\"Candidate asking price\", s=100)\n",
-    "plt.plot((0, 250), (rw_intercept, 250*rw_coef + rw_intercept), c='m', label=\"Rowhouse square meter estimated price\")\n",
+    "pred, asked, asked_w_ren = model.predict(candidate), cand_price, cand_price + cand_ren\n",
     "\n",
-    "plt.title(\"Rowhouse size vs price\")\n",
-    "plt.ylabel(\"Price, m€\")\n",
+    "fig, ax = plt.subplots(figsize=(12, 8), facecolor='w', dpi=150)\n",
+    "\n",
+    "ax.scatter(train_df[\"square_meters\"], train_df[ \"price_including_loans\"])\n",
+    "\n",
+    "ax.scatter(44.6, pred, label=f\"Candidate predicted price {pred[0]//1000}k€\", s=100)\n",
+    "ax.scatter(44.6, asked, label=f\"Candidate asked price {asked//1000}k€\", s=100)\n",
+    "ax.scatter(44.6, asked_w_ren, label=f\"Candidate price w estimated 10y renovations {asked_w_ren//1000}k€\", s=100)\n",
+    "sm_max = 120\n",
+    "plt.plot((0, sm_max), (sm_intercept, sm_max*sm_coef + sm_intercept), c='m', label=\"Chosen neighbourhoods estimated price, aka market price\")\n",
+    "\n",
+    "plt.title(f\"m2 vs price in chosen neighbourhoods\\n{neighbourhoods_wl}\")\n",
+    "plt.ylabel(\"Price (€)\")\n",
     "plt.xlabel(\"Size in square meters\")\n",
     "plt.grid(True)\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Estimate value gain "
    ]
   },
   {
@@ -466,7 +646,126 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cand_price, cand_ren"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offer = -9000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selling_price = cand_price + offer\n",
+    "selling_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "money_in = selling_price + cand_ren\n",
+    "money_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_revenue_perc = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "required_reselling_price = money_in * (100 + expected_revenue_perc) / 100\n",
+    "required_reselling_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reselling_price = 240000\n",
+    "reselling_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profit = reselling_price - money_in\n",
+    "profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profit_perc = profit / money_in * 100 // 1\n",
+    "profit_perc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Helsinki € / m2 development for past 2y "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "two_y_ago = 5422\n",
+    "last_mon = 6130\n",
+    "\n",
+    "incr_perc = (last_mon - two_y_ago) / two_y_ago * 100\n",
+    "incr_perc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Two room apartments in Helsinki 2y dev "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "two_y_ago = 5334\n",
+    "last_mon = 5881\n",
+    "incr_perc = (last_mon - two_y_ago) / two_y_ago * 100\n",
+    "incr_perc"
+   ]
   }
  ],
  "metadata": {
